# scotty-form

./: CHANGELOG.md  cabal.project  scotty-form.cabal
example/: scott-form-example.cabal
example/app/: Main.hs
scotty-form/: LICENSE  scotty-form.cabal
scotty-form/src/Web/Scotty/: Form.hs
scotty-form/src/Web/Scotty/Trans/: Form.hs
src/Web/Scotty/: Form.hs
